# Processing_images

./: CMakeLists.txt  main.cpp
include/: bitmap.h  improc.hpp
src/: bitmap.c  improc.cpp
test/: test_img.cpp
